symlink_stuff/files/theme-sac-pilatus/scss/components/_event_filter_board.scss
.select2-results__option {
  font-size: .825rem;
}

.filter-board {
  background-color: transparent;

  .filter-board-widget {
    visibility: hidden;
  }

  a.select-organizer-all {
    color: #f8f8f8;
  }

  label {
    color: #fff;
    margin-top: 1rem;
  }

  input[type="text"], select, .btn {
    //padding-top: 0.65rem;
    //padding-bottom: 0.65rem;
  }

  input#ctrl_dateStart {
    background: #fff !important;
  }


  input[type="text"], textarea, select {
    //margin: 0;
    width: 100%;
    outline: none;
    border: 0;
  }

  select2-selection__rendered {
    border-radius: 0 !important;
  }

  .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
    border-radius: 0;
  }


  .select2-container--default .select2-selection--multiple {
    border: 0 !important;
    padding: .25rem;
    line-height: 1.6;
    border-radius: 0 !important;
    font-size: .75rem;

    .select2-selection__choice {
      background-color: $blue !important;
      color: #fff !important;
      border: 0;
      border-radius: 0 !important;

      .select2-selection__choice__remove {
        color: #fff;
      }
    }
  }

  .datepicker {
    z-index: 1200;
  }

  .reset-form {
    color: #fff;
  }

  .widget-checkbox {
    legend {
      display: none;
    }

    .form-check.form-switch {
      display: flex;
      align-items: flex-start;
      padding: 0;
    }

    .form-check.form-switch .form-check-input {
      border-radius: 2em;
    }

    .form-check.form-switch > label {
      margin-bottom: 0 !important;
      line-height: 1;
    }

    .form-switch .form-check-input {
      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.99%29'/%3e%3c/svg%3e");
    }

    .form-switch .form-check-input:checked {
      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"), var(--bs-gradient);
    }

    .form-check-input:checked {
      background-color: #000;
      border-color: #000;
    }


  }
}

.select2-container--default .select2-selection--multiple {
  //border: 0 !important;
  //line-height: 1.6;
}

